--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.0.3",
     "morgan": "~1.9.0",
+    "node-schedule": "^1.3.0",
     "nodemon": "^1.14.12",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "uuid": "^3.2.1"
   }
 }
