--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-schedule": "^1.3.0",
     "nodemon": "^1.14.12",
     "serve-favicon": "~2.4.5",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "winston": "^2.4.0"
   }
 }
