--- a/.ebextensions/https-instance-securitygroup.config
+++ b/.ebextensions/https-instance-securitygroup.config
@@ -1,9 +1,10 @@
 Resources:
-  sslSecurityGroupIngress: 
-    Type: AWS::EC2::SecurityGroupIngress
+  sslSecurityGroupIngress:
     Properties:
-      GroupId: {"Fn::GetAtt" : ["AWSEBSecurityGroup", "GroupId"]}
+      CidrIp: 0.0.0.0/0
+      FromPort: 443
+      GroupId:
+        Fn::GetAtt: [AWSEBSecurityGroup, GroupId]
       IpProtocol: tcp
       ToPort: 443
-      FromPort: 443
-      CidrIp: 0.0.0.0/0
+    Type: AWS::EC2::SecurityGroupIngress
