--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,3 +1,2 @@
 option_settings:
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "node ./bin/www"
+  aws:elasticbeanstalk:container:nodejs: {NodeCommand: node ./bin/www}
